--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 .image-contain {
   height: 50%;
   object-fit: contain;
@@ -8,10 +12,17 @@
   object-fit: contain;
 }
 
-.modal {
-  display: block;
-  position: fixed;
-  overflow: hidden;
+/* dim page */
+.dimmer {
+  background:#000;
+  opacity:0.9;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  display:none;
+  z-index: 100;
 }
 
 /* iphone 6/7/8 */
