--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -12,17 +12,13 @@ html, body {
   object-fit: contain;
 }
 
-/* dim page */
-.dimmer {
-  background:#000;
-  opacity:0.9;
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  display:none;
-  z-index: 100;
+.page-mask {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 /* iphone 6/7/8 */
