--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -2,6 +2,10 @@ html, body {
   overflow-x: hidden;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .image-contain {
   height: 50%;
   object-fit: contain;
