made styling across pages more consistent and removed unnecessary spacing

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -16,6 +16,11 @@ html, body {
   object-fit: contain;
 }
 
+.card-images {
+  height: 24rem;
+  object-fit: contain;
+}
+
 .page-mask {
   background: rgba(0, 0, 0, 0.5);
   position: fixed;
